feat: update video/photo viewer, refactor post creating area (#1150)

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -129,8 +129,6 @@ routes:
       handler: "Wall->rss"
     - url: "/wall{num}/makePost"
       handler: "Wall->makePost"
-    - url: "/wall/edit"
-      handler: "Wall->edit"
     - url: "/wall{num}_{num}"
       handler: "Wall->post"
     - url: "/wall{num}_{num}/like"
@@ -171,6 +169,8 @@ routes:
       handler: "Photos->uploadPhoto"
     - url: "/photo{num}_{num}"
       handler: "Photos->photo"
+    - url: "/photo{num}_{num}/like"
+      handler: "Photos->like"
     - url: "/photos/thumbnails/{num}_{text}.jpeg"
       handler: "Photos->thumbnail"
     - url: "/photos/{text}"
@@ -403,6 +403,8 @@ routes:
       handler: "About->dev"
     - url: "/iapi/getPhotosFromPost/{num}_{num}"
       handler: "InternalAPI->getPhotosFromPost"
+    - url: "/iapi/getPostTemplate/{num}_{num}"
+      handler: "InternalAPI->getPostTemplate"
     - url: "/tour"
       handler: "About->tour"
     - url: "/{?shortCode}"
