feat(wall): add new route /{type}/{id}/likes

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -143,6 +143,8 @@ routes:
       handler: "Wall->accept"
     - url: "/wall/decline"
       handler: "Wall->decline"
+    - url: "/{text}/{num}_{num}/likes"
+      handler: "Wall->likers"
     - url: "/blob_{text}/{?path}.{text}"
       handler: "Blob->file"
       placeholders:
