feat(music): syncronized lyrics by lrc file format
!!!DRAFT!!!

Co-authored-by: Mikhail Serebryakov <126566943+synzr@users.noreply.github.com>

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -225,6 +225,8 @@ routes:
       handler: "Audio->playlists"
     - url: "/audio{num}/action"
       handler: "Audio->action"
+    - url: "/audio{num}/lrc"
+      handler: "Audio->lrc"
     - url: "/{?!club}{num}"
       handler: "Group->view"
       placeholders:
