feat: ajax, audio refactor (#1164)
* Make audio player pizdatey

* Simple ajax routing (scripts are broken)

* Fix most common script problems pt1

* Add ajax player

Осталось пофиксить скрипты и создание плейлистов! Ну и ещё некоторые хуйни по аудиозаписям которые я задумал.

* Add context menu for audios

* Refactor audio upload page

* Repair playlists

* Fix main problems

* Midnight teme adaptation

* Stupid bug fix

* Save audios list in da localstorage and fix msgbox

* Fix time setting

* add beforeUnload event

* Stupid bugs fix

* update page footer on transition

* fix wall publihing

* fix 500 on non existent page

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -201,14 +201,10 @@ routes:
       handler: "Audio->upload"
     - url: "/audios{num}"
       handler: "Audio->list"
-    - url: "/audios/popular"
-      handler: "Audio->popular"
-    - url: "/audios/new"
-      handler: "Audio->new"
-    - url: "/audio{num}_{num}/embed.xhtml"
-      handler: "Audio->embed"
     - url: "/audio{num}/listen"
       handler: "Audio->listen"
+    - url: "/audio{num}_{num}"
+      handler: "Audio->aloneAudio"
     - url: "/audios/search"
       handler: "Audio->search"
     - url: "/audios/newPlaylist"
