--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -38,8 +38,9 @@ openvk:
                 maxViolations: 50
                 maxViolationsAge: 120
                 autoban: true
-            blacklists:
-                applyToAdmins: true
+        blacklists:
+            limit: 100
+            applyToAdmins: true
         registration:
             enable: true
             disablingReason: ""
