feat(privacy): blacklist v2 (#1183)
* Перенос ветки blacklist (#900)

* Blacklist

* Config

* upd

* Added restrictions in the users.get method

* ok

* Update en.strings

* ok 2.0

---------

Co-authored-by: Vladimir Barinov <veselcraft@icloud.com>

* Create 00038-blacklist.sql

* typo xd

* Blacklists: Make it barely work (xd)

* БЛЯЯЯЯЯЯЯЯТЬ

* remove all

* account.ban, account.unban, account.getBanned

* rewrite ui

* add link

* add ignore button to blacklisted users

* fields blacklisted_by_me, blacklisted

* ad ability to blacklist when you ar blacklisted

---------

Co-authored-by: n1rwana <me@n1rwana.xyz>
Co-authored-by: Vladimir Barinov <veselcraft@icloud.com>
Co-authored-by: n1rwana <aydashkin@vk.com>

--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -38,6 +38,9 @@ openvk:
                 maxViolations: 50
                 maxViolationsAge: 120
                 autoban: true
+        blacklists:
+            limit: 100
+            applyToAdmins: true
         registration:
             enable: true
             disablingReason: ""
