feat(wall): ability to add geopoint to post (#945)
* Гео-метки

* Update Post.xml

* Wall: geotag translation

* Wall: design + sql fix

* Карта ближайших постов

* Update al_wall.js

* VKAPI: Geo support (not tested idk)

* Update WallPresenter.php

* Better geo points

* Редактирование названия геоточки через интерфейс при создании

* SQL and geopoint name fixes

* fix js

* rewrite a lot

---------

Co-authored-by: veselcraft <veselcraft@icloud.com>
Co-authored-by: mrilyew <99399973+mrilyew@users.noreply.github.com>

--- a/Web/static/js/package.json
+++ b/Web/static/js/package.json
@@ -9,6 +9,8 @@
     "jquery": "^3.0.0",
     "knockout": "^3.5.1",
     "ky": "^0.19.0",
+    "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^2.4.0",
     "literallycanvas": "^0.5.2",
     "monaco-editor": "^0.20.0",
     "msgpack-lite": "^0.1.26",
