feat(global): news on left menu
Co-authored-by: Slava Petrov <55963296+saursvepur@users.noreply.github.com>

--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -111,6 +111,9 @@ openvk:
         defaultMobileTheme: ""
         defaultFeaturePhoneTheme: ""
         logs: true
+        news:
+            show: false
+            groupId: 1
     
     telemetry:
         plausible:
