feat(global): news on left menu
Co-Authored-By: Vladimir Barinov <22993408+veselcraft@users.noreply.github.com>

--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -112,6 +112,9 @@ openvk:
         defaultMobileTheme: ""
         defaultFeaturePhoneTheme: ""
         logs: true
+        news:
+            show: false
+            groupId: 1
     
     telemetry:
         plausible:
