create document entity

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -311,6 +311,10 @@ routes:
       handler: "Poll->view"
     - url: "/poll{num}/voters"
       handler: "Poll->voters"
+    - url: "/docs"
+      handler: "Documents->list"
+    - url: "/docs{num}"
+      handler: "Documents->listGroup"
     - url: "/admin"
       handler: "Admin->index"
     - url: "/admin/users"
