--- a/Web/di.yml
+++ b/Web/di.yml
@@ -27,6 +27,7 @@ services:
     - openvk\Web\Presenters\VKAPIPresenter
     - openvk\Web\Presenters\PollPresenter
     - openvk\Web\Presenters\BannedLinkPresenter
+    - openvk\Web\Presenters\DocumentsPresenter
     - openvk\Web\Models\Repositories\Users
     - openvk\Web\Models\Repositories\Posts
     - openvk\Web\Models\Repositories\Polls
@@ -52,5 +53,6 @@ services:
     - openvk\Web\Models\Repositories\Aliases
     - openvk\Web\Models\Repositories\BannedLinks
     - openvk\Web\Models\Repositories\ChandlerGroups
+    - openvk\Web\Models\Repositories\Documents
     - openvk\Web\Presenters\MaintenancePresenter
     - openvk\Web\Presenters\NoSpamPresenter
