add viewer and gallery

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -317,6 +317,8 @@ routes:
       handler: "Documents->listGroup"
     - url: "/docs/upload"
       handler: "Documents->upload"
+    - url: "/doc{num}_{num}"
+      handler: "Documents->page"
     - url: "/admin"
       handler: "Admin->index"
     - url: "/admin/users"
