--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -311,6 +311,14 @@ routes:
       handler: "Poll->view"
     - url: "/poll{num}/voters"
       handler: "Poll->voters"
+    - url: "/docs"
+      handler: "Documents->list"
+    - url: "/docs{num}"
+      handler: "Documents->listGroup"
+    - url: "/docs/upload"
+      handler: "Documents->upload"
+    - url: "/doc{num}_{num}"
+      handler: "Documents->page"
     - url: "/admin"
       handler: "Admin->index"
     - url: "/admin/users"
