--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -22,6 +22,9 @@ openvk:
             photoSaving: "quick"
         videos:
             disableUploading: false
+        docs:
+            maxSize: 10 # in megabytes
+            allowedFormats: ["jpg", "jpeg", "png", "gif", "webp", "psd", "aep", "docx", "doc", "odt", "txt", "md", "pptx", "ppt", "xls", "xlsx", "pdf", "djvu", "fb2", "ps", "apk", "zip", "7z", "mp4", "avi", "mp3", "flac"]
         apps:
             withdrawTax: 8
         security:
