--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,8 @@
 {
+    "scripts": {
+        "fix": "php-cs-fixer fix",
+        "lint": "php-cs-fixer fix --dry-run --diff --verbose"
+    },
     "require": {
         "php": "~7.3||~8.1",
         "guzzlehttp/guzzle": "^6.5",
@@ -22,5 +26,8 @@
         "php81_bc/strftime": "^0.0.2",
         "ext-iconv": "*"
     },
-    "minimum-stability": "beta"
+    "minimum-stability": "beta",
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.68"
+    }
 }
