--- a/.github/workflows/build-base.yaml
+++ b/.github/workflows/build-base.yaml
@@ -12,6 +12,12 @@ env:
 jobs:
   build-cli:
     runs-on: ubuntu-latest
+    
+    # 'push' runs on inner branches, 'pull_request' will run only on outer PRs
+    if: >
+      github.event_name == 'push'
+      || (github.event_name == 'pull_request'
+          && github.event.pull_request.head.repo.full_name != github.repository)
 
     steps:
       - uses: actions/checkout@v3
@@ -42,6 +48,12 @@ jobs:
 
   build-apache:
     runs-on: ubuntu-latest
+    
+    # 'push' runs on inner branches, 'pull_request' will run only on outer PRs
+    if: >
+      github.event_name == 'push'
+      || (github.event_name == 'pull_request'
+          && github.event.pull_request.head.repo.full_name != github.repository)
 
     steps:
       - uses: actions/checkout@v3
