--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,6 +14,12 @@ jobs:
 
         runs-on: ubuntu-latest
 
+        # 'push' runs on inner branches, 'pull_request' will run only on outer PRs
+        if: >
+          github.event_name == 'push'
+          || (github.event_name == 'pull_request'
+              && github.event.pull_request.head.repo.full_name != github.repository)
+
         steps:
             - name: Set up QEMU
               uses: docker/setup-qemu-action@v3
@@ -64,6 +70,12 @@ jobs:
         name: Build DB images
 
         runs-on: ubuntu-latest
+        
+        # 'push' runs on inner branches, 'pull_request' will run only on outer PRs
+        if: >
+          github.event_name == 'push'
+          || (github.event_name == 'pull_request'
+              && github.event.pull_request.head.repo.full_name != github.repository)
 
         steps:
             - name: Set up QEMU
