fix(actions): update Ubuntu
20.04 is no longer supported by GitHub so using ubuntu-latest instead

--- a/.github/workflows/analyse.yaml
+++ b/.github/workflows/analyse.yaml
@@ -7,7 +7,7 @@ on:
 jobs:
   phpstan:
     name: PHPStan
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     
     # 'push' runs on inner branches, 'pull_request' will run only on outer PRs
     if: >
