add list of allowed hosts in notes images
Co-Authored-By: n1rwana <93197434+n1rwana@users.noreply.github.com>

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -413,6 +413,8 @@ routes:
       handler: "InternalAPI->getPhotosFromPost"
     - url: "/iapi/getPostTemplate/{num}_{num}"
       handler: "InternalAPI->getPostTemplate"
+    - url: "/image.php"
+      handler: "InternalAPI->imageFilter"
     - url: "/tour"
       handler: "About->tour"
     - url: "/fave"
