--- a/install/automated/docker/openvk.example.yml
+++ b/install/automated/docker/openvk.example.yml
@@ -22,6 +22,9 @@ openvk:
             photoSaving: "quick"
         videos:
             disableUploading: false
+        docs:
+            maxSize: 10 # in megabytes
+            allowedFormats: ["jpg", "jpeg", "png", "gif", "webp", "psd", "aep", "docx", "doc", "odt", "txt", "md", "pptx", "ppt", "xls", "xlsx", "pdf", "djvu", "fb2", "ps", "apk", "zip", "7z", "mp4", "avi", "mp3", "flac"]
         apps:
             withdrawTax: 8
         security:
@@ -38,6 +41,19 @@ openvk:
                 maxViolations: 50
                 maxViolationsAge: 120
                 autoban: true
+                eventsLimit:
+                    enable: true
+                    ignoreForAdmins: true
+                    restrictionTime: 86400
+                    list:
+                        groups.create: 5
+                        groups.sub: 50
+                        friends.outgoing_sub: 25
+                        wall.post: 5000
+                        gifts.send: 30
+        blacklists:
+            limit: 100
+            applyToAdmins: true
         registration:
             enable: true
             disablingReason: ""
@@ -52,6 +68,11 @@ openvk:
             strict: false
         music:
             exposeOriginalURLs: true
+        newsfeed:
+            ignoredSourcesLimit: 50
+        notes:
+            disableHotlinking: true
+            allowedHosts: []
         wall:
             christian: false
             anonymousPosting:
@@ -106,6 +127,9 @@ openvk:
         defaultMobileTheme: ""
         defaultFeaturePhoneTheme: ""
         logs: true
+        news:
+            show: false
+            groupId: 1
     
     telemetry:
         plausible:
