chore(compose): add new parameters to chandler config

--- a/install/automated/docker/chandler.example.yml
+++ b/install/automated/docker/chandler.example.yml
@@ -25,3 +25,11 @@ chandler:
         csrfProtection: "permissive"
         extendedValidation: false
         sessionDuration: 14
+
+    email:
+        host: "mail.example.com"
+        port: 465
+        user: "user"
+        pass: "word"
+        addr: "noreply@example.com"
+        ssl: true
