fix: solve PHP 8 warnings detected by Tracy on local instance
not directly related to PHPStan but nice to have anyway

--- a/install/automated/docker/openvk.example.yml
+++ b/install/automated/docker/openvk.example.yml
@@ -101,6 +101,8 @@ openvk:
             notification: false
             support: false
             topics: false
+            audios: false
+            documents: false
         ton:
             enabled: false
             address: "🅿"
