chore: suppress warnings

--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -91,6 +91,7 @@ openvk:
             all: false
             photos: false
             videos: false
+            audios: false
             messenger: false
             user: false
             group: false
