--- a/install/automated/kubernetes/manifests/001-configmap.yaml
+++ b/install/automated/kubernetes/manifests/001-configmap.yaml
@@ -65,6 +65,7 @@ data:
               all: false
               photos: false
               videos: false
+              audios: false
               messenger: false
               user: false
               group: false
