--- a/install/automated/kubernetes/manifests/001-configmap.yaml
+++ b/install/automated/kubernetes/manifests/001-configmap.yaml
@@ -66,6 +66,7 @@ data:
               photos: false
               videos: false
               audios: false
+              documents: false
               messenger: false
               user: false
               group: false
