--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -92,6 +92,7 @@ openvk:
             photos: false
             videos: false
             audios: false
+            documents: false
             messenger: false
             user: false
             group: false
